Sina/tile numbers (#30)
* refactor constant data to GeneralConstants

* add circle, label & text to tiles

* fix typo in board.fxml

* fix tileTypesOnBoard

* implement generateTileNumberPoints

* initialize tiles with numbers and points

* refactor tileNumberTokensOnBoard to GeneralConstants

* change desert tile label & text